# WangGouMusic

./: .gitignore  CMakeLists.txt  Info.plist.in  README.md  app.rc  cmake_wanggou.icns  image.qrc  main.cpp  main.mm  main.qml  qml.qrc
CPPSrc/: ApiClient.cpp  ApiClient.h  HttpGetRequester.h  NowPlayingMediaController.h  NowPlayingMediaController.mm  NowPlayingMediaController_win.cpp  WebSocketClient.cpp  WebSocketClient.h  appupdater.cpp  appupdater.h  gethostsearch.cpp  gethostsearch.h  httpgetrequester.cpp  lyricparser.cpp  lyricparser.h  lyricsconfigmanager.cpp  lyricsconfigmanager.h  macoswindow.h  macoswindow.mm  playlistmanager.cpp  playlistmanager.h  recommendation.cpp  recommendation.h  searchcomplex.cpp  searchcomplex.h  singleapplication.cpp  singleapplication.h  trayhandler.cpp  trayhandler.h  usermanager.cpp  usermanager.h
Src/BasicConfig/: AppTheme.qml  BasicConfig.qml  LocateCurrentButton.qml  qmldir
Src/Bottompage/: Bottompage.qml
Src/ComponentPage/: Add_room_window.qml  ComplexPage.qml  DesktopLyrics.qml  HomePage.qml  LocalMusic.qml  LoginPage.qml  LyricPage.qml  MyfavoriteMusic.qml  PlaylistDetailPage.qml  RecentlyPlayed.qml  SearchresultPage.qml  Togethermusicmain.qml  UpdateDialog.qml  UserPlaylistPage.qml  musictogether.qml
Src/Leftpage/: Leftpage.qml
Src/PlayingPage/: PlayingPage.qml
Src/Rightpage/: LoginStatus.qml  MaxMin.qml  RightTopPage.qml  Rightpage.qml  Search.qml
Src/ToolWindow/: EmptyState.qml  NavIcon.qml  NoteWindow.qml  SongAddedToast.qml
cmake_wanggou/: CMakeLists.txt  image.qrc  main.mm
cmake_wanggou/.cache/clangd/index/: HttpGetRequester.h.866DCE529350598D.idx  WebSocketClient.cpp.D7DDDE432DD26704.idx  WebSocketClient.h.595FAB6F169C3340.idx  gethostsearch.cpp.28AF65449966F2A9.idx  gethostsearch.h.7C288FF333412232.idx  httpgetrequester.cpp.5DE136707F4C8D4A.idx  lyricparser.cpp.4DDA5ADDCF647547.idx  lyricparser.h.109DC2B33F0D3154.idx  main.mm.9A994480B5FA9E85.idx  playlistmanager.cpp.3DE79A0069DA10BD.idx  playlistmanager.h.A9B28FFC271EC19B.idx  recommendation.cpp.166DA74C876D5D26.idx  recommendation.h.12DDEFEF7451EF10.idx  searchcomplex.cpp.1A6DED7B342A724D.idx  searchcomplex.h.1ACC0F1757EB6556.idx  trayhandler.cpp.48677809FE3FA23F.idx  trayhandler.h.1E15022E6FFE0738.idx
cmake_wanggou/CPPSrc/: WebSocketClient.cpp  lyricparser.h  playlistmanager.cpp  playlistmanager.h  recommendation.cpp  searchcomplex.cpp  trayhandler.cpp
cmake_wanggou/Src/BasicConfig/: BasicConfig.qml
cmake_wanggou/Src/Bottompage/: Bottompage.qml
cmake_wanggou/Src/ComponentPage/: Add_room_window.qml  musictogether.qml
cmake_wanggou/Src/PlayingPage/: PlayingPage.qml
